Fix:Adjusted margin and modified skills horizontal scroll

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -162,7 +162,7 @@ body {
     flex: 1;
     position: relative;
     width: 100%;
-    margin-top: 4vh;
+    margin-top: 15vh;
     margin-bottom: 2vh;
     display: flex;
     align-items: center;
